# rocoChallenge2026

./: .gitignore  .gitmodules  LICENSE  README.md  isaaclab_environment_1.yml  isaaclab_environment_2.yml  isaaclab_environment_4.yml  prepare_dataset.py  pyproject.toml  setup_assets.sh
data/: README.md
reports/: nonzero_scores_summary.md
scripts/: analyze_data_structure.py  check_hdf5.py  check_hdf5_short.py  check_lengths.py  check_max_length.py  deploy_policy.py  deploy_policy_debug.py  evaluate_episodes.py  find_nonzero_scores.py  inspect_and_compare_datasets.py  inspect_data.py  merge_dataset.py  merge_datasets.py  monitor_disk_and_kill.py  rename_dataset_files.py  roco_hdf5_viewer.py  run_conversion.sh  safe_download_missing.py  symlink_dataset.py  to_lerobot_dataset.py  upload_readme.py  upload_to_hf.py  verify_model.py  verify_model_offline.py
source/Galaxea_Lab_External/Galaxea_Lab_External.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
source/Galaxea_Lab_External/Galaxea_Lab_External/VLA/ACT/: policy_wrapper.py
source/Galaxea_Lab_External/Galaxea_Lab_External/robots/: galaxea_rule_policy.py  gears_assets.py
source/Galaxea_Lab_External/assets/Gearbox/: planetary_carrier_3x_scale.usd  planetary_reducer_3x_scale.usd  ring_gear_3x_scale.usd  sun_planetary_gear_3x_scale.usd
source/Galaxea_Lab_External/assets/Gearbox/archive/: planetary_carrier_3x.usd  planetary_reducer_3x.usd  ring_gear_3x.usd  sun_planetary_gear_3x.usd
source/Galaxea_Lab_External/assets/Props/table/: OakTableLarge.usd
(+6 files in other folders)
